# BackroomsScreensaver

./: .gitattributes  .gitignore  BackroomsMaze_backup.ini  CMakeLists.txt  README.md
.playwright-mcp/: page-2026-05-28T17-15-41-464Z.yml  page-2026-05-29T17-08-29-319Z.yml  page-2026-05-29T17-08-37-720Z.yml  page-2026-05-29T17-09-41-361Z.yml
.tmp_sounds/: door.7z
assets/models/: 19-office-chair.rar  20-office-desk.rar
assets/sounds/: SOURCE_LICENSES.md
build_codex/: CMakeCache.txt
docs/: ARCHITECTURE.md  GAME_PLAN.md  REFACTOR_PLAN.md
src/: app.rc  main.cpp  player_camera_movement.inl
src/app/: app_runtime.inl  app_state.h  app_state.inl  entry_point.inl  run_mode.h
src/audio/: audio_engine.cpp  audio_engine.h  audio_engine.inl  audio_engine_dependencies.h  audio_engine_fields.inl  audio_engine_lifecycle.cpp  audio_engine_loading.cpp  audio_engine_playback.cpp  audio_engine_private_api.inl  audio_engine_public_api.inl  audio_engine_public_playback_api.inl  audio_engine_settings_adapter.h  audio_engine_types.h  audio_engine_update.inl  audio_engine_voice.cpp  audio_engine_voice_apply3d.cpp  audio_engine_voice_selection.cpp  audio_engine_voice_spatial.cpp  audio_engine_voice_start.cpp  game_audio_events.cpp  game_audio_events.h  game_audio_system.cpp  game_audio_system.h  renderer_audio.inl  renderer_audio_occlusion.inl  renderer_audio_persistent_emitters.inl  renderer_audio_spatial_header.inl  renderer_audio_spatial_runtime.inl  renderer_audio_update.inl  renderer_audio_wall_blocks.inl  renderer_delayed_audio.inl  renderer_game_audio_air_vent_queue.inl  renderer_game_audio_bulb_break_queue.inl  renderer_game_audio_dispatch.inl  renderer_game_audio_drain_events.inl  renderer_game_audio_event_core.inl  renderer_game_audio_events.inl  renderer_game_audio_footstep_hearing_radius.inl  renderer_game_audio_footsteps.inl  renderer_game_audio_neon_queue.inl  (+32 more)
src/config/: config_dialog.inl  config_dialog_apply_scroll.inl  config_dialog_control_parsing.inl  config_dialog_controls.inl  config_dialog_controls_load_save.inl  config_dialog_controls_reset.inl  config_dialog_create_action_buttons.inl  config_dialog_create_embedded.inl  config_dialog_create_field_layout.inl  config_dialog_create_preview.inl  config_dialog_create_state_model.inl  config_dialog_create_tabs.inl  config_dialog_field_controls.inl  config_dialog_field_lookup.inl  config_dialog_field_value_set.inl  config_dialog_fields_atmosphere.inl  config_dialog_fields_camera_ai.inl  config_dialog_fields_camera_fx.inl  config_dialog_fields_lighting.inl  config_dialog_fields_maze.inl  config_dialog_fields_monster.inl  config_dialog_fields_renderer.inl  config_dialog_fields_textures.inl  config_dialog_host.inl  config_dialog_layout.inl  config_dialog_main_commands.inl  config_dialog_main_create.inl  config_dialog_main_lifecycle.inl  config_dialog_main_notify_timer.inl  config_dialog_main_preview_input.inl  config_dialog_main_scroll.inl  config_dialog_main_wnd_proc.inl  config_dialog_mode.h  config_dialog_model.inl  config_dialog_model_builders.inl  config_dialog_model_debug.inl  config_dialog_model_dispatch.inl  config_dialog_model_field_helpers.inl  config_dialog_model_full.inl  config_dialog_model_game.inl  (+86 more)
src/core/: constants.h  constants.inl  math_utils.h  math_utils.inl  maze_types.h
src/debug/: debug_control_ids.h  debug_slice_clock.inl  debug_slice_command.inl  debug_slice_controls.inl  debug_slice_create_controls.inl  debug_slice_effect.h  debug_slice_effect_step.inl  debug_slice_loop_reset.inl  debug_slice_loop_update.inl  debug_slice_redraw_controls.inl  debug_slice_runtime.inl  debug_slice_settings_apply.inl  debug_slice_settings_apply_header.inl  debug_slice_settings_apply_lamps.inl  debug_slice_settings_apply_liquids.inl  debug_slice_settings_apply_maze_camera.inl  debug_slice_settings_apply_props.inl  debug_slice_update_controls.inl  effect_debug.cpp  effect_debug.h  effect_debug.inl  effect_debug_constants.h  effect_debug_globals.inl  effect_debug_prop_camera.inl  effect_debug_prop_names.inl  effect_debug_slice_names.inl  effect_debug_slice_water.inl  startup_progress.h
src/game/: custom_game_menu.h  game_app.inl  game_app_apply_control_fonts.inl  game_app_autostart.inl  game_app_controls.inl  game_app_create_controls.inl  game_app_create_custom_controls.inl  game_app_loop.inl  (+359 more)
tools/: convert-emergency-exit-sign.py  convert-runtime-models.py  export-decimated-mask.py  merge-ini-defaults.ps1  package-game-tester.ps1  package-release.ps1  prepare-prop-models.blender.py  prepare-prop-models.py  reduce-monster-mask.blender.py
(+969 files in other folders)
